[package]
name    = "sabisabi"
version = "0.2.0"

repository  = "https://github.com/RoxasShadow/sabisabi"
authors     = ["Giovanni Capuano <webmaster@giovannicapuano.net>"]
license     = "WTFPL"
description = "Guessing game for Anki"
keywords    = ["Anki", "Memorization", "game", "guessing"]

[dependencies]
regex       = "0.1"
lazy_static = "0.2"
rand        = "0.3"
ansi_term   = "0.8"

[lib]
name = "sabisabi"
path = "src/lib.rs"

[[bin]]
name = "sabisabi"
path = "src/main.rs"
